fix: outline color of the collapse search form button in the venue map
LIIKUNTA-559.

--- a/apps/sports-helsinki/src/domain/search/searchHeader/searchHeader.module.scss
+++ b/apps/sports-helsinki/src/domain/search/searchHeader/searchHeader.module.scss
@@ -79,7 +79,12 @@
       margin-left: auto;
       background-color: white;
 
+      &:focus {
+        outline: 2px solid var(--color-coat-of-arms); /* todo: use color-primary-black instead */
+      }
+
       @include breakpoints.respond-above(m) {
+        margin-right: var(--spacing-s);
         width: unset;
         border: 2px solid;
         height: 45px;
